[BTWCT-1029] - added left/right nav arrows for level0 mobile nav, fixed L2 position mobile

--- a/waters-aem-frontend/src/styles/navigation.scss
+++ b/waters-aem-frontend/src/styles/navigation.scss
@@ -1,3 +1,5 @@
+$level0MobileDisplay: flex;
+
 .navigation {
    position: relative;
    float: none!important;
@@ -5,7 +7,6 @@
    z-index: 998;
    height: 67px;
    width: 105%!important;
-   padding: 0 $space-xl;
    margin: 0 (($space-xl - (14/(16*1.1)))*-1)!important; 
 
    &:hover {
@@ -63,6 +64,36 @@ nav.cmp-navigation {
          display: none;
       }
 
+      &.is-expanded > .cmp-navigation__item.is-active > .cmp-navigation__group {
+         visibility: visible;
+      }
+
+      &.is-expanded > .cmp-navigation__item.is-active{
+         display: $level0MobileDisplay;
+
+         & > .cmp-navigation__container {
+            padding: $space-m $space-m $space-m $space-xl;
+            border-left: 3px solid $color-gray-50;
+
+            & > .arrow.left{
+               display: block;
+               position: absolute;
+               left: $space-xs;
+            }
+   
+            & > .arrow.right{
+               display: none;
+            }
+         }
+      }
+
+      &.is-expanded > .cmp-navigation__item{
+         display: none;
+      }
+
+
+
+
       & > .cmp-navigation__item {
          @include font-h3;
          margin-right: $space-xl;
@@ -81,43 +112,20 @@ nav.cmp-navigation {
             }
 
             @include mobile {
-               display: flex;
+               display: $level0MobileDisplay;
                margin: 0;
                padding: 0;
                border-top: 0px none transparent;
                border-bottom: 1px solid $color-border-rule;
-
-               & > .cmp-navigation__container{
-                  display: flex;
-                  padding: $space-m;
-                  flex-grow: 1;
-               }
-
-               & > .cmp-navigation__container > a {
-                  align-self: center;
-               }
-
-               & > .cmp-navigation__container > svg,
-               & > .cmp-navigation__container > img.inline-svg {
-                  align-self: center;
-                  margin-left: auto;
-               }
-
             }
 
             svg,
             img.inline-svg {
-               display: none;
                width: $icon-m;
                height: $icon-m;
-               justify-self: end;
-               align-self: center;
                
                .st0 {
                   stroke: $color-icon;
-               }
-               @include mobile {
-                  display: inline-block;
                }
             }
 
@@ -150,29 +158,58 @@ nav.cmp-navigation {
             }
          }
 
-         & > .cmp-navigation__item-link {
-            @include font-h3;
-            color: $color-font-medium;
-            -webkit-transition: none;
-            -o-transition: none;
-            -moz-transition: none;
-            transition: none;
-            vertical-align: middle;
-            display: table-cell;
+         & > .cmp-navigation__container{
+            display: flex;
+            padding: $space-m;
+            flex-grow: 1;
+            border-left: 3px solid transparent;
 
-            @supports (display: inline-grid) {
-               display: block;
+            & > a { 
+               align-self: center; 
             }
 
-            @include mobile {
-               margin: 0;
+            & > .arrow {
+               display: inline-block;
+               justify-self: end;
+               align-self: center;
+
+               &.left{
+                  display: none;
+               }
+               &.right{
+                  display: block;
+                  margin-left: auto;
+               }
+               @include tablet-and-over {
+                  display: none !important;
+               }
+
             }
 
-            &:hover {
-               color: $color-font-dark;
-               text-decoration: none;
+            & .cmp-navigation__item-link {
+               @include font-h3;
+               color: $color-font-medium;
+               -webkit-transition: none;
+               -o-transition: none;
+               -moz-transition: none;
+               transition: none;
+               vertical-align: middle;
+               display: table-cell;
+   
+               @supports (display: inline-grid) {
+                  display: block;
+               }
+   
+               @include mobile {
+                  margin: 0;
+               }
+   
+               &:hover {
+                  color: $color-font-dark;
+                  text-decoration: none;
+               }
+   
             }
-
          }
 
          & > .cmp-navigation__group {
@@ -188,22 +225,13 @@ nav.cmp-navigation {
             width: 100%;
 
             @include mobile {
-               padding: $space-s $space-m  $space-m $space-m
+               padding: $space-l $space-xl  $space-xl $space-xl
             }
 
             & > .cmp-navigation__item {
                margin-bottom: 0;
                padding-bottom: $space-s;
-
-               svg,
-               img.inline-svg {
-                  display: none;
-               }
             }
-         }
-
-         &.is-active > .cmp-navigation__group {
-            visibility: visible;
          }
          
          @include tablet-and-over {
@@ -230,7 +258,7 @@ nav.cmp-navigation {
             &:hover > .cmp-navigation__group {
                visibility: visible;
    
-               & .cmp-navigation__item-link {
+               & .cmp-navigation__container .cmp-navigation__item-link {
                   -webkit-transition: none;
                   -o-transition: none;
                   -moz-transition: none;
@@ -245,7 +273,7 @@ nav.cmp-navigation {
    }
 }
 
-.cmp-navigation__item-link {
+.cmp-navigation__container .cmp-navigation__item-link {
    -webkit-transition: none;
    -o-transition: none;
    -moz-transition: none;
